Close icon is not correctly centered Interlign between "PUBLIC" and subtitle is too important Align a little bit on the right choices (Public, Private)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -193,7 +193,32 @@ th h4 { font-weight:normal; }
   -o-transition: -o-transform 0.1s ease-out;
   transition: transform 0.1s ease-out;
 }
-
 .panel .panel-footer .fa-fw {
     width: 20px;
+}
+.btn-default {
+  background-color: #898989;
+  border-color: #898989;
+}
+.modal-header button.close {
+  line-height: 12px;
+}
+#privacyModal .modal-body .form-group {
+    margin-bottom: 25px;
+}
+#privacyModal input {
+    vertical-align:bottom;
+    margin-top: 2px;
+}
+#privacyModal label{
+    display: block;
+    color: #363636;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 1.25;
+    text-transform: uppercase;
+}
+#privacyModal .help-block {
+    margin:0 0 0 15px;
+    color: #a3a3a3;
 }
